--- a/Análise de Dados/Censo Escolar 2024/Dados_Censo_Escolar_2024_Exercício_03.ipynb
+++ b/Análise de Dados/Censo Escolar 2024/Dados_Censo_Escolar_2024_Exercício_03.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "15b80713",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "d66d72d3",
    "metadata": {},
    "outputs": [
@@ -192,48 +192,222 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215540</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Centro-Oeste</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>5300108</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>5301</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215541</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Centro-Oeste</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>5300108</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>5301</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215542</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Centro-Oeste</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>5300108</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>5301</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215543</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Centro-Oeste</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>5300108</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>5301</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215544</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Centro-Oeste</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>5300108</td>\n",
+       "      <td>Distrito Federal</td>\n",
+       "      <td>5301</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 426 columns</p>\n",
+       "<p>215545 rows × 426 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   NU_ANO_CENSO NO_REGIAO  CO_REGIAO     NO_UF SG_UF  CO_UF  \\\n",
-       "0          2024     Norte          1  Rondônia    RO     11   \n",
-       "1          2024     Norte          1  Rondônia    RO     11   \n",
-       "2          2024     Norte          1  Rondônia    RO     11   \n",
-       "3          2024     Norte          1  Rondônia    RO     11   \n",
-       "4          2024     Norte          1  Rondônia    RO     11   \n",
+       "        NU_ANO_CENSO     NO_REGIAO  CO_REGIAO             NO_UF SG_UF  CO_UF  \\\n",
+       "0               2024         Norte          1          Rondônia    RO     11   \n",
+       "1               2024         Norte          1          Rondônia    RO     11   \n",
+       "2               2024         Norte          1          Rondônia    RO     11   \n",
+       "3               2024         Norte          1          Rondônia    RO     11   \n",
+       "4               2024         Norte          1          Rondônia    RO     11   \n",
+       "...              ...           ...        ...               ...   ...    ...   \n",
+       "215540          2024  Centro-Oeste          5  Distrito Federal    DF     53   \n",
+       "215541          2024  Centro-Oeste          5  Distrito Federal    DF     53   \n",
+       "215542          2024  Centro-Oeste          5  Distrito Federal    DF     53   \n",
+       "215543          2024  Centro-Oeste          5  Distrito Federal    DF     53   \n",
+       "215544          2024  Centro-Oeste          5  Distrito Federal    DF     53   \n",
        "\n",
-       "            NO_MUNICIPIO  CO_MUNICIPIO NO_REGIAO_GEOG_INTERM  \\\n",
-       "0  Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
-       "1  Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
-       "2  Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
-       "3  Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
-       "4  Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
+       "                 NO_MUNICIPIO  CO_MUNICIPIO NO_REGIAO_GEOG_INTERM  \\\n",
+       "0       Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
+       "1       Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
+       "2       Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
+       "3       Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
+       "4       Alta Floresta D'Oeste       1100015             Ji-Paraná   \n",
+       "...                       ...           ...                   ...   \n",
+       "215540               Brasília       5300108      Distrito Federal   \n",
+       "215541               Brasília       5300108      Distrito Federal   \n",
+       "215542               Brasília       5300108      Distrito Federal   \n",
+       "215543               Brasília       5300108      Distrito Federal   \n",
+       "215544               Brasília       5300108      Distrito Federal   \n",
        "\n",
-       "   CO_REGIAO_GEOG_INTERM  ... QT_TUR_BAS_D  QT_TUR_BAS_N QT_TUR_BAS_EAD  \\\n",
-       "0                   1102  ...          4.0           0.0            0.0   \n",
-       "1                   1102  ...          0.0           4.0            0.0   \n",
-       "2                   1102  ...          NaN           NaN            NaN   \n",
-       "3                   1102  ...         10.0           0.0            0.0   \n",
-       "4                   1102  ...         35.0           5.0            0.0   \n",
+       "        CO_REGIAO_GEOG_INTERM  ... QT_TUR_BAS_D  QT_TUR_BAS_N QT_TUR_BAS_EAD  \\\n",
+       "0                        1102  ...          4.0           0.0            0.0   \n",
+       "1                        1102  ...          0.0           4.0            0.0   \n",
+       "2                        1102  ...          NaN           NaN            NaN   \n",
+       "3                        1102  ...         10.0           0.0            0.0   \n",
+       "4                        1102  ...         35.0           5.0            0.0   \n",
+       "...                       ...  ...          ...           ...            ...   \n",
+       "215540                   5301  ...         10.0           0.0            0.0   \n",
+       "215541                   5301  ...         22.0           0.0            0.0   \n",
+       "215542                   5301  ...         16.0           0.0            0.0   \n",
+       "215543                   5301  ...         25.0           0.0            0.0   \n",
+       "215544                   5301  ...          9.0           0.0            0.0   \n",
        "\n",
-       "   QT_TUR_INF_INT QT_TUR_INF_CRE_INT  QT_TUR_INF_PRE_INT QT_TUR_FUND_INT  \\\n",
-       "0             0.0                0.0                 0.0             0.0   \n",
-       "1             0.0                0.0                 0.0             0.0   \n",
-       "2             NaN                NaN                 NaN             NaN   \n",
-       "3             0.0                0.0                 0.0             0.0   \n",
-       "4             0.0                0.0                 0.0             0.0   \n",
+       "        QT_TUR_INF_INT QT_TUR_INF_CRE_INT  QT_TUR_INF_PRE_INT QT_TUR_FUND_INT  \\\n",
+       "0                  0.0                0.0                 0.0             0.0   \n",
+       "1                  0.0                0.0                 0.0             0.0   \n",
+       "2                  NaN                NaN                 NaN             NaN   \n",
+       "3                  0.0                0.0                 0.0             0.0   \n",
+       "4                  0.0                0.0                 0.0             0.0   \n",
+       "...                ...                ...                 ...             ...   \n",
+       "215540             0.0                0.0                 0.0             0.0   \n",
+       "215541             4.0                4.0                 0.0             0.0   \n",
+       "215542             0.0                0.0                 0.0             0.0   \n",
+       "215543             1.0                0.0                 1.0             0.0   \n",
+       "215544             0.0                0.0                 0.0             0.0   \n",
        "\n",
-       "   QT_TUR_FUND_AI_INT QT_TUR_FUND_AF_INT  QT_TUR_MED_INT  \n",
-       "0                 0.0                0.0             0.0  \n",
-       "1                 0.0                0.0             0.0  \n",
-       "2                 NaN                NaN             NaN  \n",
-       "3                 0.0                0.0             0.0  \n",
-       "4                 0.0                0.0             0.0  \n",
+       "        QT_TUR_FUND_AI_INT QT_TUR_FUND_AF_INT  QT_TUR_MED_INT  \n",
+       "0                      0.0                0.0             0.0  \n",
+       "1                      0.0                0.0             0.0  \n",
+       "2                      NaN                NaN             NaN  \n",
+       "3                      0.0                0.0             0.0  \n",
+       "4                      0.0                0.0             0.0  \n",
+       "...                    ...                ...             ...  \n",
+       "215540                 0.0                0.0             0.0  \n",
+       "215541                 0.0                0.0             0.0  \n",
+       "215542                 0.0                0.0             0.0  \n",
+       "215543                 0.0                0.0             0.0  \n",
+       "215544                 0.0                0.0             0.0  \n",
        "\n",
-       "[5 rows x 426 columns]"
+       "[215545 rows x 426 columns]"
       ]
      },
      "metadata": {},
@@ -244,7 +418,7 @@
     "caminho_do_arquivo = r'C:\\Users\\Administrador\\Documents\\GitHub\\TJGO_CienciaDeDados\\microdados_censo_escolar_2024\\dados\\microdados_ed_basica_2024.csv'\n",
     "df = pd.read_csv(caminho_do_arquivo, delimiter=';', encoding='latin1', low_memory=False)\n",
     "\n",
-    "display(df.head())"
+    "display(df)"
    ]
   },
   {
@@ -276,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c89e42a1",
    "metadata": {},
    "outputs": [
@@ -632,10 +806,7 @@
     "    'DT_ANO_LETIVO_TERMINO'\n",
     "]\n",
     "\n",
-    "# Use a nova lista para reordenar as colunas do seu DataFrame\n",
     "df_filtrado = df[lista_reordenada].copy()\n",
-    "\n",
-    "# Visualize o resultado. A ordem estará muito mais clara!\n",
     "df_filtrado.head()"
    ]
   },
@@ -785,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "6e1271f9",
    "metadata": {},
    "outputs": [
@@ -963,7 +1134,6 @@
     "                                                  format=formato_data, \n",
     "                                                  errors='coerce')\n",
     "\n",
-    "# Verificar o resultado\n",
     "print(\"Tipos de dados após a conversão:\")\n",
     "print(df_filtrado[['DT_ANO_LETIVO_INICIO', 'DT_ANO_LETIVO_TERMINO']].dtypes)\n",
     "\n",
