--- a/AtividadePrática-Encontro 7/Kit8.ipynb
+++ b/AtividadePrática-Encontro 7/Kit8.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,7 +10,41 @@
         "id": "rSnRhkZx9gKe",
         "outputId": "2d96ecad-8ce2-43b5-dc22-d857d2b47c39"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "🎯 Acurácia: 0.7988826815642458\n",
+            "\n",
+            "📊 Relatório de Classificação:\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.82      0.85      0.83       105\n",
+            "           1       0.77      0.73      0.75        74\n",
+            "\n",
+            "    accuracy                           0.80       179\n",
+            "   macro avg       0.79      0.79      0.79       179\n",
+            "weighted avg       0.80      0.80      0.80       179\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\Administrador\\AppData\\Local\\Temp\\ipykernel_14048\\1752554777.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+            "\n",
+            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+            "\n",
+            "\n",
+            "  df_model['Age'].fillna(df_model['Age'].mean(), inplace=True)\n"
+          ]
+        }
+      ],
       "source": [
         "### 🧪 Kit Prático – Semana 8: Introdução à Modelagem com Scikit-learn – Classificação\n",
         "# Tema: Predição de sobrevivência com Regressão Logística\n",
@@ -59,9 +93,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "--- Modelo do Desafio Extra (apenas com 'Pclass' e 'Sex') ---\n",
+            "\n",
+            "🎯 Acurácia (Desafio): 0.7821\n",
+            "\n",
+            "📊 Relatório de Classificação (Desafio):\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.80      0.84      0.82       105\n",
+            "           1       0.75      0.70      0.73        74\n",
+            "\n",
+            "    accuracy                           0.78       179\n",
+            "   macro avg       0.78      0.77      0.77       179\n",
+            "weighted avg       0.78      0.78      0.78       179\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# -------------------------------------------------------------------\n",
         "# DESAFIO EXTRA:\n",
@@ -106,7 +163,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.12.6"
     }
   },
   "nbformat": 4,
